res.txt
You are using demisto-sdk 1.7.7.
2022-11-10T23:52:52Z [DEBUG]: Content path /Users/viktor.babchanik/Desktop/content
2022-11-10T23:52:52Z [DEBUG]: Test requirements successfully collected for python 3:
 ['astroid==2.11.5', 'attrs==21.4.0', 'certifi==2022.5.18', 'charset-normalizer==2.0.12', 'coverage==6.3.3', 'dill==0.3.4', 'execnet==1.9.0', 'flake8==4.0.1', 'freezegun==1.2.1', 'hypothesis==6.46.7', 'idna==3.3', 'iniconfig==1.1.1', 'isort==5.10.1', 'lazy-object-proxy==1.7.1', 'mccabe==0.6.1', 'multidict==6.0.2', 'packaging==21.3', 'platformdirs==2.5.2', 'pluggy==1.0.0', 'py==1.11.0', 'pycodestyle==2.8.0', 'pyflakes==2.4.0', 'pylint==2.13.9', 'pyparsing==3.0.9', 'pytest==7.1.2', 'pytest-asyncio==0.18.3', 'pytest-cov==3.0.0', 'pytest-datadir-ng==1.1.1', 'pytest-forked==1.4.0', 'pytest-json==0.4.0', 'pytest-mock==3.7.0', 'pytest-xdist==2.5.0', 'python-dateutil==2.8.2', 'pyyaml==6.0', 'requests==2.27.1', 'requests-mock==1.9.3', 'setuptools==62.3.2', 'six==1.16.0', 'sortedcontainers==2.4.0', 'toml==0.10.2', 'tomli==2.0.1', 'urllib3==1.26.9', 'vcrpy==4.1.1', 'vulture==2.4', 'wrapt==1.14.1', 'yarl==1.7.2']
2022-11-10T23:52:52Z [DEBUG]: read file /Users/viktor.babchanik/Desktop/content/Tests/demistomock/demistomock.py
2022-11-10T23:52:52Z [DEBUG]: read file /Users/viktor.babchanik/Desktop/content/Tests/scripts/dev_envs/pytest/conftest.py
2022-11-10T23:52:52Z [DEBUG]: read file /Users/viktor.babchanik/Desktop/content/Packs/Base/Scripts/CommonServerPython/CommonServerPython.py
2022-11-10T23:52:52Z [DEBUG]: Changed file /Users/viktor.babchanik/Desktop/content/Packs/Base/Scripts/CommonServerPython/CommonServerPython.py without demisto import
2022-11-10T23:52:52Z [DEBUG]: read file /Users/viktor.babchanik/Desktop/content/Tests/demistomock/demistomock.ps1
2022-11-10T23:52:52Z [DEBUG]: read file /Users/viktor.babchanik/Desktop/content/Packs/Base/Scripts/CommonServerPowerShell/CommonServerPowerShell.ps1
2022-11-10T23:52:52Z [DEBUG]: Test mandatory modules successfully collected
2022-11-10T23:52:52Z [DEBUG]: creating docker client from env
2022-11-10T23:52:52Z [INFO]: LintManager - init and login the docker client
2022-11-10T23:52:52Z [DEBUG]: LintManager - Using docker mounting: True
2022-11-10T23:52:52Z [DEBUG]: pinging docker daemon
2022-11-10T23:52:52Z [DEBUG]: Docker daemon test passed
Executing lint and test on integrations and scripts in /Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3
2022-11-10T23:52:52Z [DEBUG]: Linter - docker client already available, using current DOCKER_CLIENT
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Run - Start
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - Using yaml file /Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3.yml
2022-11-10T23:52:52Z [INFO]: Waiting for futures to complete
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - Collecting all docker images to pull
2022-11-10T23:52:52Z [DEBUG]: Updating support level for CTIXv3
2022-11-10T23:52:52Z [DEBUG]: Before reading content of /Users/viktor.babchanik/Desktop/content/Packs/CTIX/pack_metadata.json
2022-11-10T23:52:52Z [DEBUG]: After reading content of /Users/viktor.babchanik/Desktop/content/Packs/CTIX/pack_metadata.json
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - demisto/python3:3.10.8.37233 - Python 3.10
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - Tests found
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - Lint file /Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3_test.py
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Facts - Lint file /Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3.py
2022-11-10T23:52:52Z [INFO]: CTIXv3 - Run Lint In Host - Started
2022-11-10T23:52:52Z [INFO]: CTIXv3 - XSOAR Linter - Start
2022-11-10T23:52:54Z [WARNING]: CTIXv3 - XSOAR Linter - Finished, warnings found
2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - XSOAR Linter - Finished, exit-code: 4
2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - XSOAR Linter - Finished, stdout: 
************* Module CTIXv3
/Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3.py:1:0: W9011 : return_error used too many times, should be used only once in the code, in main function. Please remove other usages.

2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - XSOAR Linter - Finished, stderr: 
2022-11-10T23:52:54Z [INFO]: CTIXv3 - Bandit - Start
2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - Bandit - Finished, exit-code: 0
2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - Bandit - Finished, stdout: 
2022-11-10T23:52:54Z [DEBUG]: CTIXv3 - Bandit - Finished, stderr: 
2022-11-10T23:52:54Z [INFO]: CTIXv3 - Bandit - Successfully finished
2022-11-10T23:52:54Z [INFO]: CTIXv3 - Mypy - Start
2022-11-10T23:52:55Z [DEBUG]: CTIXv3 - Mypy - Finished, exit-code: 1
2022-11-10T23:52:55Z [DEBUG]: CTIXv3 - Mypy - Finished, stdout: 
/Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3.py:15:42: error:
Name "__line__" is not defined  [name-defined]
    register_module_line("CTIX v3", "start", __line__())
                                             ^
/Users/viktor.babchanik/Desktop/content/Packs/CTIX/Integrations/CTIXv3/CTIXv3.py:1643:40: error:
Name "__line__" is not defined  [name-defined]
    register_module_line("CTIX v3", "end", __line__())
                                           ^
Found 2 errors in 1 file (checked 1 source file)

2022-11-10T23:52:55Z [DEBUG]: CTIXv3 - Mypy - Finished, stderr: 
2022-11-10T23:52:55Z [ERROR]: CTIXv3 - Mypy - Finished, errors found
2022-11-10T23:52:55Z [INFO]: CTIXv3 - Run Lint In Host - Finished successfully
2022-11-10T23:52:55Z [INFO]: CTIXv3 - Run Lint On Docker Image - Running lint: Number of images=[['demisto/python3:3.10.8.37233', '3.10']]
2022-11-10T23:52:55Z [INFO]: CTIXv3 - Run Lint On Docker Image - Running lint on docker image demisto/python3:3.10.8.37233
2022-11-10T23:52:55Z [INFO]: CTIXv3 - Image create - Trying to pull existing image devtestdemisto/python3:3.10.8.37233-f1a8a03f0d4031309fa67e5b6b566d13
2022-11-10T23:52:55Z [DEBUG]: pull_image - docker client already available, using current DOCKER_CLIENT
2022-11-10T23:52:55Z [INFO]: CTIXv3 - pylint - Image devtestdemisto/python3:3.10.8.37233-f1a8a03f0d4031309fa67e5b6b566d13 - Start
2022-11-10T23:52:55Z [DEBUG]: docker client already available, using current DOCKER_CLIENT
